decrease card margins slightly on mobile to prevent border from being cut off

--- a/style.css
+++ b/style.css
@@ -415,7 +415,7 @@ body {
 /* Mobile */
 @media screen and (max-width:499px) {
   .card {
-    width: 100%;
+    width: 98.5%;
   }
 }
 
